@@ -46,6 +46,7 @@
 #include "wx/thread.h"
 #include "wx/utils.h"
 #include "wx/ptr_scpd.h"
+#include "wx/evtloop.h"
 
 #if defined(__WXMSW__)
     #include  "wx/msw/private.h"  // includes windows.h for LOGFONT
@@ -466,6 +467,35 @@ void wxAppBase::OnIdle(wxIdleEvent& WXUNUSED(event))
 #endif // wxUSE_LOG
 
 }
+
+// ----------------------------------------------------------------------------
+// exception handling
+// ----------------------------------------------------------------------------
+
+#if wxUSE_EXCEPTIONS
+
+void wxAppBase::HandleEvent(wxEvtHandler *handler,
+                            wxEventFunction func,
+                            wxEvent& event) const
+{
+    // by default, call wxApp::OnExceptionInMainLoop if an exception occurs
+    try
+    {
+        handler->DoHandleEvent(func, event);
+    }
+    catch ( ... )
+    {
+        if ( !wxConstCast(this, wxAppBase)->OnExceptionInMainLoop() )
+        {
+            wxEventLoop *loop = wxEventLoop::GetActive();
+            if ( loop )
+                loop->Exit(-1);
+        }
+        //else: continue running the event loop
+    }
+}
+
+#endif // wxUSE_EXCEPTIONS
 
 // ----------------------------------------------------------------------------
 // wxGUIAppTraitsBase
